# dlp-control

./: .gitignore  CMakeLists.txt  README.md  display_lattice.py  hdmi.py  requirements.txt  setup.py
examples/: example.py  example2.py  example_trigger.py
pattern-on-the-fly/: CMakeLists.txt  enhancedRLE.cpp  example.py  send_seq.py  usb_comm.py
pattern_on_the_fly/: CMakeLists.txt  __init__.py  enhancedRLE.cpp  example.py  send_seq.py  usb_comm.py
video_mode/: display_pattern.py  multi_monitor_cv.py
